[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-summarizer"
version = "2025.12.21160330"
description = "A new package designed to interpret and summarize user-provided textual descriptions of multimedia content, such as videos or audio transcripts, to generate structured overviews or insights. It allows"
readme = "README.md"
authors = [{ name = "media-summarizer", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/media-summarizer"
